# dev-tools

./: Makefile  README.md  pyproject.toml  setup.py
jupyter/: jupyter-lab-server.service  jupyter_lab_config.py  lunch_jupyterlab.sh  setup_conda_with_jupyter.sh
scripts/: brew_install.sh  install.sh  sdkman_install.sh
